// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--transparent euiEmptyPrompt testClass1 testClass2 emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      <h2
        class="euiTitle emotion-euiTitle-m"
      >
        Title
      </h2>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiText emotion-euiText-m-euiTextColor-subdued"
      >
        <p>
          Body
        </p>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <div>
        Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      actions
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      <div
        class="euiFlexGroup euiEmptyPrompt__actions emotion-euiFlexGroup-m-center-center-column-euiEmptyPrompt__actions-vertical"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          action1
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          action2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      <div
        class="euiText emotion-euiText-m-euiTextColor-subdued"
      >
        body
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiEmptyPrompt emotion-euiPanel-m-accent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color accentSecondary is rendered 1`] = `
<div
  class="euiPanel euiPanel--accentSecondary euiEmptyPrompt emotion-euiPanel-m-accentSecondary-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiEmptyPrompt emotion-euiPanel-m-danger-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color highlighted is rendered 1`] = `
<div
  class="euiPanel euiPanel--highlighted euiEmptyPrompt emotion-euiPanel-m-highlighted-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color neutral is rendered 1`] = `
<div
  class="euiPanel euiPanel--neutral euiEmptyPrompt emotion-euiPanel-m-neutral-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiEmptyPrompt emotion-euiPanel-m-primary-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color risk is rendered 1`] = `
<div
  class="euiPanel euiPanel--risk euiEmptyPrompt emotion-euiPanel-m-risk-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiEmptyPrompt emotion-euiPanel-m-subdued-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiEmptyPrompt emotion-euiPanel-m-success-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiEmptyPrompt emotion-euiPanel-m-warning-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props footer renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
  <div
    class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-transparent-roundedBorders"
  >
    footer
  </div>
</div>
`;

exports[`EuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span>
        Custom icon
      </span>
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span
        color="danger"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props layout renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-horizontal"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-horizontal-l-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-horizontal"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-m"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-s"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props styles are rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
  style="background: yellow; min-width: 200px; max-width: 600px;"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      <div
        class="euiTitle emotion-euiTitle-m"
      >
        title
      </div>
    </div>
  </div>
</div>
`;
